--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(render C)
 
 add_executable(${PROJECT_NAME} draw.c geometry.c main.c model.c tga.c)
 
-target_link_libraries(${PROJECT_NAME} m)
+if(CMAKE_COMPILER_IS_GNUCC)
+    target_link_libraries(${PROJECT_NAME} m)
+endif()
 
 enable_testing()
 
